# yogen

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.streamlit/: config.toml
src/yogen/Modelling/: lifecycle.ipynb  lstm.py
src/yogen/streamlit_app/: main.py
